# chmusicpro

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md
.github/: secret_scanning.yml
.github/workflows/: release.yml
.run/: aiproxysrv.run.xml  aiwebui.run.xml  chmusicprosrv.run.xml  chmusicproweb.run.xml
aiproxysrv/: .git-blame-ignore-revs  Dockerfile  Makefile  docker-compose.dev.yml  env_template  pyproject.toml
aiproxysrv/scripts/: compare_db_schemas.py  export_prompt_templates.py  import_openai_costs_historical.py  migration_template.py
aiproxysrv/src/: __init__.py  server.py  wsgi.py
aiproxysrv/src/adapters/s3/: __init__.py  mime_types_config.py
aiproxysrv/src/alembic/versions/: 02794a7298bd_add_title_and_tags_to_generated_images.py  0femi2213rz5_add_api_costs_monthly.py  1e747e89b0c0_add_version_field_to_equipment.py  234ea0f4b6c3_base64_encode_lyric_parsing_rule_.py  281d8c3887b4_add_s3_storage_fields_to_images.py  3ffbc7c3ecf6_create_generated_images_table.py  5a095be007d5_add_missing_unique_constraints_.py  6685241cf8e3_add_unique_constraint_on_prompt_.py  67836ff70afb_add_title_and_tags_fields_to_songs_table.py  6f3e14479027_migrate_license_management_to_english.py  75b410845228_add_artist_name_to_users.py  8bbbad800c3b_add_external_provider_to_conversations.py  91c1fff66986_add_stem_url_and_generated_at_to_song_.py  b58281de7dda_add_release_description_fields_to_.py  c2a7fd48d7e3_add_conversations_and_messages_tables_.py  d4a678986a16_create_equipment_table.py  e8eb92a7820b_add_project_asset_relations.py
aiproxysrv/src/api/: app.py  auth_middleware.py
aiproxysrv/src/api/controllers/: lyric_parsing_rule_controller.py
aiproxysrv/src/api/routes/: chat_routes.py  equipment_routes.py  health_routes.py  ollama_routes.py  openai_chat_routes.py  song_routes.py  workshop_routes.py
aiproxysrv/src/business/: __init__.py  api_cost_transformer.py  bulk_delete_transformer.py  compression_orchestrator.py  compression_transformer.py  equipment_normalizer.py  equipment_transformer.py  image_enhancement_service.py  image_transformer.py  ollama_model_transformer.py  ollama_orchestrator.py  openai_chat_orchestrator.py  song_orchestrator.py  song_project_transformer.py  song_release_orchestrator.py  song_transformer.py  workshop_normalizer.py
aiproxysrv/src/config/: settings.py
aiproxysrv/src/db/: api_cost_service.py  equipment_attachment_service.py  equipment_service.py  models.py  prompt_template_service.py  sketch_service.py  song_service.py  workshop_service.py
aiproxysrv/src/infrastructure/: file_management_service.py  image_file_service.py
aiproxysrv/src/infrastructure/storage/: __init__.py  s3_storage.py
aiproxysrv/src/schemas/: common_schemas.py  openai_chat_schemas.py  project_asset_schemas.py  song_release_schemas.py  user_schemas.py
aiproxysrv/src/utils/: __init__.py
aiproxysrv/tests/: __init__.py  test_claude_chat_transformer.py  test_compression_transformer.py  test_prompt_template_processor.py  test_prompt_template_validator.py  test_song_project_transformer.py
aiproxysrv/tests/business/: test_song_transformer.py
aiproxysrv/tests/integration/test_routes/: test_sketch_routes.py
aiproxysrv/tests/scripts/: __init__.py  test_verify_schema.py
aiproxysrv/tests/unit/test_business/: test_image_enhancement_service.py
aiproxysrv/tests/unit/test_controllers/: __init__.py  test_image_controller.py  test_sketch_controller.py
aiproxysrv/tests/unit/test_database/: __init__.py
aiproxysrv/tests/unit/test_utils/: test_database_helpers.py
aitestmock/: pyproject.toml
aitestmock/data/mureka/instrumental/0001/: query_instrument_succeeded.json
aitestmock/data/mureka/songs/0001/: query_song_status_suceeded.json
aitestmock/src/: server.py
aitestmock/src/api/: chat.py  mureka.py  openai.py  openai_chat_mock.py
aitestmock/src/config/: settings.py
aitestmock/src/controllers/: mureka_controller.py  openai_controller.py
aitestmock/src/services/: mureka_service.py  openai_service.py
aitestmock/src/utils/: logger.py
aiwebui/: .dependency-cruiser.js  .gitignore  .stylelintrc.json  Makefile  angular.json  docker-compose.dev.yml
aiwebui/src/: index.html
chmusicprosrv/: .chmusicproignore  .dockerignore  .env_pytest  .importlinter  Dockerfile  Makefile  docker-compose.dev.yml  env_template  pyproject.toml
chmusicprosrv/scripts/: compare_db_schemas.py  create_initial_user.py  install_fonts.sh  verify_schema.py
chmusicprosrv/src/: server.py  wsgi.py
chmusicprosrv/tests/: .coverage  README.md  __init__.py  conftest.py  test_bulk_delete_transformer.py  test_encryption_service.py  test_equipment_normalizer.py  test_image_transformer.py  test_image_validator.py  test_ollama_model_transformer.py  test_openai_chat_transformer.py  test_schemas.py  test_song_project_transformer.py  test_song_validator.py
chmusicproweb/: .npmrc  Dockerfile  Makefile  angular.json  docker-compose.dev.yml  eslint.config.js  package-lock.json  package.json  tsconfig.json
chmusicproweb/scripts/: update-version.js
chmusicproweb/src/: index.html  main.ts  styles.scss  test-setup.ts
claude/: branding-doing-status.md
develop-env/: docker-compose.yml  init-db.sh
docs/: ARCHITECTURE.md  Anforderungen an KI-Rechenleistung.md  BETRIEBSKOSTEN_LOKALE_KI.md  CI_CD.md  CODE_PATTERNS.md  CODE_PATTERNS_3LAYER.md  DB_IMPL_DEVS.md  DEPLOYMENT.md  DOCKER-INSTALL.md  LOCAL_AI_HARDWARE_SIZING.md  LOCAL_AI_SPEZIFIKATIONEN.md  MIGRATION_PROCESS.md  PRODUCTION_RECOVERY_PLAN.md  README.md  README_USER_SETUP.md  TROUBLESHOOTING.md  UI_PATTERNS.md  ergaenzungen.md  gotobusiness-small.md  suno-readme-tags.md  vps_minio.md
docs/arch42/: 10.1_song_generierung_workflow.mmd  13_database_schema.mmd  3.1_fachlicher_kontext.mmd  5.1_systemuebersicht.mmd  5.2.1_angular_projektstruktur.mmd  6.1_bildgenerierung.mmd  6.2_musikgenerierung.mmd  6.3_ai_chat_workflow.mmd  7.3_netzwerk_architektur.mmd  9.1_entwicklungs_deployment.mmd  9.2_produktions_deployment.mmd  README.md
musicprosrv/: .coverage  celerybeat-schedule.db
ollamasrv/: README.md
scripts/cli/: .aiproxyignore.default  (+5 more)
(+511 files in other folders)
