[build-system]
requires = ["setuptools>=61", "wheel>=0.46.2"]
build-backend = "setuptools.build_meta"

[project]
name = "aiproxysrv"
version = "2.15.0"
dependencies = [
    "Flask>=3.1.2",
    "Flask-CORS>=4.0.0",
    "Werkzeug>=3.1.5",
    "requests>=2.32.5",
    "python-dotenv>=1.1.1",
    "gunicorn>=23.0.0",
    "SQLAlchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "flask-pydantic>=0.12.0",
    "apispec[validation]>=6.3.0",
    "flask-apispec>=0.11.4",
    "PyYAML>=6.0",
    "bcrypt>=4.0.0",
    "PyJWT>=2.8.0",
    "email-validator>=2.0.0",
    "cryptography>=41.0.0",
    "tomli>=2.0.0",
    "loguru>=0.7.0",
    "tiktoken>=0.5.1",
    "Pillow>=11.0.0",
    "boto3>=1.34.0",
    "urllib3>=2.6.3",
    "marshmallow>=4.1.2",
    "filelock>=3.20.3"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=3.5.0",
    "import-linter>=2.0",
    "pip-audit>=2.7.0"
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-env>=1.1.0"
]

[project.scripts]
start-server = "aiproxysrv.server:main"

[tool.setuptools.packages.find]
where = ["src"]

# ===================================
# Ruff Configuration
# ===================================
[tool.ruff]
# Python version target
target-version = "py312"

# Line length (same as Black default)
line-length = 120

# Source code directories
src = ["src"]

# Exclude patterns
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
    ".mypy_cache",
    ".ruff_cache",
]

[tool.ruff.lint]
# Enable rule categories
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]

# Disable specific rules
ignore = [
    "E501",   # Line too long (handled by formatter)
    "B008",   # Do not perform function call in argument defaults
    "B904",   # Use raise from within except
    "ARG002", # Unused method argument (common in overrides)
    "N805",   # First argument should be self/cls (pydantic validators)
    "SIM208", # Use ternary operator - DISABLED: breaks SQLAlchemy expressions (not X → X == False)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"src/alembic/**/*.py" = ["E402"]  # Allow imports not at top (alembic env.py)

[tool.ruff.lint.isort]
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Unix line endings
line-ending = "lf"

# ===================================
# Pytest Configuration
# ===================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",                          # Verbose output
    "--strict-markers",            # Fail on unknown markers
    "--tb=short",                  # Short traceback format
    "--cov=src",                   # Coverage for src directory
    "--cov-report=term-missing",   # Show missing lines in terminal
    "--cov-report=html",           # Generate HTML coverage report
    "--cov-fail-under=90",         # Fail if coverage below 80% (business logic only, infrastructure excluded)
]
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (test full controller flow with Pydantic validation)",
    "slow: Slow running tests",
]

# ===================================
# Pytest-Env Configuration (loads .env_test for tests)
# ===================================
[tool.pytest_env]
# Specify which .env file to load for tests (prevents using production .env)
# pytest-env will load .env_test instead of .env
DOTENV_FILE = ".env_test"

# ===================================
# Coverage Configuration
# ===================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "tests/scripts/*",  # Integration tests for scripts (not unit tests, excluded from coverage)
    "*/alembic/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    # Infrastructure - not unit-testable per CLAUDE.md
    "src/db/*_service.py",                 # DB/CRUD services (no business logic)
    "src/infrastructure/*.py",             # Infrastructure services (file I/O, PIL/Pillow - no business logic)
    "src/infrastructure/storage/*.py",     # Storage layer (S3, MinIO - infrastructure, no business logic)
    "src/adapters/*/*.py",                 # External API adapters (OpenAI, Ollama - infrastructure, mock hell)
    "src/api/app.py",                      # Flask app setup
    "src/server.py",                       # Server entry point
    "src/wsgi.py",                         # WSGI entry point
    "src/db/database.py",                  # Database connection setup
    # HTTP Layer - integration tests only
    "src/api/routes/*.py",                 # Route definitions (HTTP routing, no business logic)
    "src/api/controllers/*.py",            # Controllers (HTTP orchestration, integration tests)
    "src/api/auth_middleware.py",          # JWT middleware (Flask decorator, HTTP handling)
    # Orchestrators - per CLAUDE.md: NOT testable (only call other services)
    "src/business/*_orchestrator.py",      # Orchestrators (coordination only, no business logic)
    "src/business/external_api_service.py", # OpenAI API client (external API, mock hell)
    # Data Models - no logic to test
    "src/db/models.py",                    # SQLAlchemy models (no business logic)
    "src/schemas/*.py",                    # Pydantic schemas (validation only)
    # Imports only
    "*/__init__.py",                       # Import statements only
    # Configuration & Utilities (Infrastructure)
    "src/config/*.py",                     # Configuration files (no business logic)
    "src/utils/logger.py",                 # Logger configuration (infrastructure, no business logic)
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
